Refactored ButtonGroup and fixed layout of pop up screen